# C_Programming_Elective

./: CMakeLists.txt  Exercise1.c  Exercise2.c  Exercise3.c  Main.c  README.md
1-6/: Exercise1-6.h  Exercise2.c
12-16/: Exercise12.c  Exercise13.c  Exercise14.c  Exercise15.c  Exercise16.c  Exercises12-16.h
17-22/: Exercise17.c  Exercise17.h  Exercise18.c  Exercise18.h  Exercise19.c  Exercise19.h  Exercise20.c  Exercise20.h  Exercise21.c  Exercise21.h  Exercise22.c  Exercise22.h  Exercises17-22.h
7-11/: Exercise7.c  Exercise8.c  Exercises7-11.h
decoration/: Decoration.c  Decoration.h
