cmake_minimum_required(VERSION 3.17)
project(C_Programming_elective C)

set(CMAKE_C_STANDARD 11)

add_executable(
        C_Programming_elective
        Main.c
        Exercise1.c
        Exercise2.c
        Exercise3.c
        decoration/Decoration.c
        decoration/Decoration.h
        1-6/Exercise1.c
        1-6/Exercise2.c
        1-6/Exercise3.c
        1-6/Exercise4.c
        1-6/Exercise5.c
        1-6/Exercise6.c
        1-6/Exercise1-6.h
        7-11/Exercise7.c
        7-11/Exercise8.c
        7-11/Exercise9.c
        7-11/Exercise10.c
        7-11/Exercises7-11.h
        12-16/Exercise12.c
        12-16/Exercise13.c
        12-16/Exercise14.c
        12-16/Exercise15.c
        12-16/Exercise16.c
        12-16/Exercises12-16.h
        17-22/Exercise17.c
        17-22/Exercise17.h
        17-22/Exercises17-22.h
        17-22/Exercise18.c 17-22/Exercise18.h 17-22/Exercise19.c 17-22/Exercise19.h 17-22/Exercise20.c 17-22/Exercise20.h 17-22/Exercise21.c 17-22/Exercise21.h 17-22/Exercise22.c 17-22/Exercise22.h)
